# Seiri

./: .gitignore  .pre-commit-config.yaml  404.html  README.md  index.html  mkdocs.yaml  objects.inv  pyproject.toml  requirements.txt  sitemap.xml  transform.py
.github/workflows/: deploy_docs.yml  seiri_test.yml
changelog/: index.html
docs/: changelog.md  index.md
docs/assets/javascripts/: katex.js
docs/reference/: index.md  transform.md  validate.md
overrides/partials/: toc-item.html
reference/: index.html
reference/transform/: index.html
reference/validate/: index.html
search/: search_index.json
seiri/: __init__.py  transform.py  validate.py
tests/: Delivered.xlsx  Delivered_incorrect.xlsx  Sample.csv  test_csv_to_xlsx.py  test_validate.py  test_xlsx_to_csv.py
tests/data/: Delivered.csv  Sample.csv  Sample.xlsx
