[build-system]
requires = ["hatchling==1.21.1"]
build-backend = "hatchling.build"


[tool.hatch.version]
path = "seiri/__init__.py"


[tool.hatch.build]
include = ["/README.md", "/seiri"]

exclude = []


[project]
name = 'Seiri'
description = 'Automation Tool for csv<->xlsx transforms'
requires-python = '>=3.9'
readme = "README.md"
dynamic = ["version"]

dependencies = [
  'setuptools== 69.1.1',
  'symspellpy==6.7.7',
  'loguru==0.7.2',
  'openpyxl==3.1.2',
]

classifiers = [
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]


[project.optional-dependencies]
docs = [
    "mkdocs-material==9.5.9",      # to build docs
    "mkdocstrings-python==1.8.0",  # to build reference documentation from docstrings
]

test = [
  'pytest==8.0.0',
  'coverage==7.4.1',
]

dev = [
  'pre-commit==3.6.0',
  'ruff==0.2.0',
]


[tool.pytest.ini_options]
pythonpath = [
  "."
]


[tool.coverage.run]
source = ['seiri']
# use relative paths instead of absolute paths, this is useful for combining coverage
# reports from different OSes:
relative_files = true
